syntax = "proto3";

//import "google/protobuf/timestamp.proto";

package stock;

option go_package = "../stock";

service Stock {
  rpc UpdateStockInfo (StockInfoRequest) returns (StockInfoReply) {}
  // 取得目前的股價
  rpc FetchCurrentStockQuotes (StockQuotesRequest) returns (StockQuotesReply) {}
  // 取得股市休市日
  rpc FetchHolidaySchedule (HolidayScheduleRequest) returns (HolidayScheduleReply) {}
}

message StockInfoRequest {
  string stock_symbol = 1;
  string name = 2;
  int32 stock_exchange_market_id = 3;
  int32 stock_industry_id = 4;
  double net_asset_value_per_share = 5;
  //google.protobuf.Timestamp create_time = 6;
  bool suspend_listing = 6;
}

message StockInfoReply {
  string message = 1;
}

message StockQuotes {
  string stock_symbol = 1;
  double price = 2;
  double change = 3;
  double change_range = 4;
}

message StockQuotesRequest {
  repeated string stock_symbols = 1;
}

message StockQuotesReply {
  repeated StockQuotes stock_prices = 1;
}

message HolidayScheduleRequest {
  int32 year = 1;
}

message HolidaySchedule {
  string date = 1;
  string why = 2;
}

message HolidayScheduleReply {
  repeated HolidaySchedule holiday = 1;
}


// protoc --go_out=. --go-grpc_out=. stock.proto
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative stock.proto